# gcp-speech-to-speech-translation

./: .env.production  .gcloudignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  CRITICAL_BUG_FIXES_HANDOVER.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  Dockerfile.optimized  END_TO_END_TESTING_GUIDE.md  HANDOVER.md  OPTIMIZATION_SUMMARY.md  README.md  REAL_TIME_OPTIMIZATION_PLAN.md  TESTING.md  cloud-run-service.yaml  cloud-run-service.yaml.bak  cloudbuild-optimized.yaml  cloudbuild.yaml  deploy-all.sh  deploy-backend-config.sh  deploy-backend.sh  deploy.sh  gcp-arch.drawio  gcp-plan.md  plan.md  product-requirements-document.md  pyproject.toml  requirements.txt  run_streaming_test.sh  setup-devops-venv.sh  streaming-plan.md  test-deployment.sh  test-websocket.js  test_e2e.py  test_e2e_websocket.py  test_extended_streaming.py  test_gcp_integration.py  test_keepalive_fix.py  test_keepalive_monitor.py  (+7 more)
backend/: __init__.py  adaptive_stream_buffer.py  audio_buffer.py  audio_processor.py  batch_stt.py  config.py  connection_manager.py  connection_quality_monitor.py  debug_speechhelpers.py  enhanced_stt_service.py  error_recovery.py  fallback_orchestrator.py  hybrid_stt_service.py  main.py  main_complex_backup.py  main_minimal.py  main_phase3.py  main_simplified_broken.py  performance_monitor.py  resilience.py  services.py  smart_buffer.py  streaming_stt.py  streaming_stt_manager.py
frontend/: .firebaserc  .gitignore  FIREBASE_MANUAL_SETUP.md  README.md  audio-test.html  build.js  debug.html  deploy-firebase.sh  deploy-frontend.sh  final-test.html  jest.config.js  manual-test-script.md  mic-test.html  setup-firebase.sh  test-audio-playback.html  test-connection.html  test-e2e.html  test-local.html  test-production.js
gcp_speech_to_speech_translation/: config.py  connection_manager.py  main.py  services.py
plan/: 1_1_basis_websocket_server.md  ARCHITECTURE.md  ITERATIE 3 MOCKED API PIPELINE ARCHITEC.txt  ITERATION10_STATUS.md  ITERATION7_STATUS.md  ITERATION9_STATUS.md  PRD.md  STREAMING_STT_IMPLEMENTATION_PLAN.md  app-js-en-connection-js-architectuur.md  brownfield-live-speech2speech-translation.md  change-log.md  devops-i2.md  devops-implementation.md  devops-review.md  greenfield-live-speech2peech-translation.md  handover-21-08-2025.md  iteratie10_workflow.md  iteratie5_workflow.md  iteratie6_workflow.md  iteratie7_workflow.md  iteratie8_workflow.md  iteratie9_workflow.md  optimization-plan-execution-tips.md  optimization-plan.md  plan.md  technical-spec.md  terraform-secrets-strategy.md
tests/: conftest.py  debug_breaker.py  test_audio_file_loading.py  test_connection_manager.py  test_connection_manager_integration.py  (+15 more)
(+46 files in other folders)
